--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,6 +9,8 @@ environment:
   sdk: ">=2.16.1 <3.0.0"
 
 dependencies:
+  animate_do: ^2.1.0
+  cached_network_image: ^3.1.0
   cloud_firestore: ^3.1.8
   cupertino_icons: ^1.0.2
   equatable: ^2.0.3
@@ -17,22 +19,30 @@ dependencies:
   firebase_storage: ^10.2.8
   flutter:
     sdk: flutter
+  flutter_svg: ^1.0.3
+  get_it: ^7.2.0
+  google_fonts: 2.3.1
+  intl_phone_number_input: ^0.7.0+2
+  lottie: ^1.3.0
   overlay_support: ^2.0.1
+  pinput: ^2.2.11
+  provider: ^6.0.3
+  shimmer: ^2.0.0
+  smooth_page_indicator: ^1.0.0+2
+  timer_builder: ^2.0.0
 
 dev_dependencies:
-
   flutter_lints: ^1.0.0
   flutter_test:
     sdk: flutter
 
 flutter:
-
   uses-material-design: true
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
-
+  assets:
+    - assets/images/
+    - assets/jsons/
+    - assets/icons/
   # example:
   # fonts:
   #   - family: Schyler
