--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,6 +22,7 @@ dependencies:
   flutter_svg: ^1.0.3
   get_it: ^7.2.0
   google_fonts: 2.3.1
+  google_sign_in: ^5.4.0
   intl_phone_number_input: ^0.7.0+2
   lottie: ^1.3.0
   overlay_support: ^2.0.1
